GH-159: migrate to YAML OpenAPI spec from Annotations (Conditions) (#159)
